--- a/podcast_alpha/src/css/card.css
+++ b/podcast_alpha/src/css/card.css
@@ -13,3 +13,10 @@
     height:20%;
     width: 20%;
 }
+
+.cardWide {
+    width: 50%;
+    margin-right: 25%;
+    margin-left:25%;
+    margin-bottom: 5px
+}
