--- a/podcast_alpha/src/css/library.css
+++ b/podcast_alpha/src/css/library.css
@@ -1,15 +1,47 @@
-.cardItem{
+.myCard{
     display: flex;
     align-items: center;
-    border: grey solid 1px;
-    width: 100%;
-    height: 4rem;
+    border: 1px solid grey;
     margin-top: 5px;
-    box-shadow: 2px 3px #007ad9
+    width: 95%;
+    height: 4rem;
+    box-shadow: 2px 3px #007ad9;
+    text-align: left;
 }
 .deleteButton {
     position: absolute;
-    right: 1rem;
+    right: 4.5rem;
     display: flex;
     align-items: center;
+}
+
+.createPlaylistHeaders {
+    width: 50%;
+    margin-right: 25%;
+    margin-left:25%;
+    text-align: center;
+    margin-bottom: 15px;
+    
+}
+.createPlaylist{
+    width: 50%;
+    margin-right: 25%;
+    margin-left:25%;
+
+}
+.playlistHeaders {
+     width: 50%;
+    margin-right: 25%;
+    margin-left:25%;
+    text-align: center;
+}
+.playlists {
+    width: 80%;
+    margin-right: 10%;
+    margin-left: 10%
+
+}
+
+.playlistEpisodes {
+    display: block
 }
