--- a/podcast_alpha/src/css/main.css
+++ b/podcast_alpha/src/css/main.css
@@ -1,4 +1,11 @@
-.mainContent {
-    height:80%;
-    
+.loggedInHeader {
+    align-items: center;
+    width: 50%;
+    margin-left: 25%;
+    margin-right: 25%;
+    border-bottom: 1px solid black; 
+    text-align: center;
 }
+p {
+    display: inline-block
+    }
