--- a/podcast_alpha/src/css/library.css
+++ b/podcast_alpha/src/css/library.css
@@ -4,6 +4,7 @@
     border: 1px solid grey;
     margin-top: 5px;
     width: 90%;
+    margin-left: 2.5%;
     height: 4rem;
     box-shadow: 2px 3px #007ad9;
     text-align: left;
